--- a/myapps/postgres-pvc.yaml
+++ b/myapps/postgres-pvc.yaml
@@ -1,1 +1,12 @@
 
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+  namespace: postgres  # Adjust if using a different namespace
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi  # Change this based on your requirements
